--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>BlockEmpire</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -20,7 +20,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/w3images/mac.jpg");
+  background-image: url("/porscheboxster.jpeg");
   min-height: 100%;
 }
 
