--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="BlockEmpire" target="_blank" class="w3-hover-text-green">BlockEmpire</a></p>
+  <p>Powered by <a href="https://g.page/BlockEmpireSG?share" title="BlockEmpire" target="_blank" class="w3-hover-text-green">BlockEmpire</a></p>
 </footer>
  
 <script>
