--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/porscheboxster.jpeg");
+  background-image: url("/coffeeandpapper.jpg");
   min-height: 100%;
 }
 
@@ -125,7 +125,7 @@ body, html {
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="./porscheboxster.jpeg" alt="John" style="width:100%">
+        <img src="./media/porscheboxster.jpeg" alt="John" style="width:100%">
         <div class="w3-container">
           <h3>Benny Yuen</h3>
           <p class="w3-opacity">Founder</p>
