--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body, html {
       <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/w3images/phone_buildings.jpg" alt="Buildings" width="700" height="394">
+      <img class="w3-image w3-round-large" src="./media/btcking.jpg" alt="Buildings" width="700" height="394">
     </div>
   </div>
 </div>
@@ -339,7 +339,7 @@ body, html {
       </p>
     </form>
     <!-- Image of location/map -->
-    <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+    <img src="./media/address.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
 </div>
 
