--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ body, html {
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-text-pink w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444"><b>The Future is already Here</b></span><br>
-    <span class="w3-text-pink w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444"><b>The Future is already Here</b></span><br>
-    <span class="w3-text-pink w3-large" style="text-shadow:1px 1px 0 #444">It's just not evenly Distributed</span>
+    <span class="w3-text-pink w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:2px 2px 0 #fff"><b>The Future is already Here</b></span><br>
+    <span class="w3-text-pink w3-large" style="text-shadow:2px 2px 0 #fff">It's just not evenly Distributed</span>
     <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
