--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@ body, html {
       </p>
     </form>
     <!-- Image of location/map -->
-    <img src="./media/address.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
-    <a href="http://maps.google.com/maps?q=24+Hougang+Ave+3,+Block+24,+Singapore+530024"> target="_blank <img src="./media/address.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px"></a>
+    <!--<img src="./media/address.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px"> -->
+    <a href="http://maps.google.com/maps?q=24+Hougang+Ave+3,+Block+24,+Singapore+530024"> target="_blank" <img src="./media/address.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px"></a>
   </div>
 </div>
 
