--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@ body, html {
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Mobile: +65 8777 6638</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
     <br>
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
+    <form action="https://docs.google.com/forms/u/4/d/e/1FAIpQLSfKqWbLc53JR7fhsZ_CSqrKiTsh3uYEIl0F6siYkSc6XFc9iA/formResponse" target="_blank">
+      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="entry.1901112269"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="entry.1776894545"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="entry.1869248624"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="entry.1982685233"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
