--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@ body, html {
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://g.page/BlockEmpireSG?share" target="_blank" <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/consultants_blockempiresg/" target="_blank" <i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://twitter.com/yuenyewmeng" target="_blank" <i class="fa fa-twitter w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/company/block-empire-pte-ltd" target="_blank" <i class="fa fa-linkedin w3-hover-opacity"></i></a>
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
