--- a/index.html
+++ b/index.html
@@ -68,14 +68,10 @@ body, html {
     <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-    <a href="https://g.page/BlockEmpireSG?share" target="_blank" <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://www.facebook.com/BlockEmpireSG/" target="_blank" <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/consultants_blockempiresg/" target="_blank" <i class="fa fa-instagram w3-hover-opacity"></i></a>
     <a href="https://twitter.com/yuenyewmeng" target="_blank" <i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/company/block-empire-pte-ltd" target="_blank" <i class="fa fa-linkedin w3-hover-opacity"></i></a>
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
 </header>
 
@@ -351,7 +347,7 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <a href="https://g.page/BlockEmpireSG?share" target="_blank" <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://www.facebook.com/BlockEmpireSG/" target="_blank" <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/consultants_blockempiresg/" target="_blank" <i class="fa fa-instagram w3-hover-opacity"></i></a>
     <a href="https://twitter.com/yuenyewmeng" target="_blank" <i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/company/block-empire-pte-ltd" target="_blank" <i class="fa fa-linkedin w3-hover-opacity"></i></a>
