--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ body, html {
       tempor incididunt ut labore et dolore.</p>
     </div>
     <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Blockchain & Web3 Consultancy</p>
+      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Blockchain</p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:100%">100%</div>
       </div>
