--- a/index.html
+++ b/index.html
@@ -239,10 +239,8 @@ body, html {
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Our Skills.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
+      <p>Certify by Institute of Blockchain Singapore</p>
+      <p>Certify by Google, Google Ads Display Specialist</p>
     </div>
     <div class="w3-col m6">
       <p class="w3-wide"><i class="fa fa-gear w3-margin-right"></i>Blockchain & Web3 Consultancy</p>
