--- a/index.html
+++ b/index.html
@@ -172,20 +172,20 @@ body, html {
 <!-- Promo Section "Statistics" -->
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
   <div class="w3-quarter">
-    <span class="w3-xxlarge">14+</span>
+    <span class="w3-xxlarge">8+</span>
     <br>Partners
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">55+</span>
+    <span class="w3-xxlarge">18+</span>
     <br>Projects Done
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">89+</span>
+    <span class="w3-xxlarge">53+</span>
     <br>Happy Clients
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">150+</span>
-    <br>Meetings
+    <span class="w3-xxlarge">3+</span>
+    <br>New Projects
   </div>
 </div>
 
